--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,11 @@
         </activity>
         <activity android:name=".ArticlesActivity" />
         <activity android:name=".DetailsActivity"></activity>
+
+        <provider
+            android:name="trendy.mina.com.trendy.database.generated.TrendyContentProvider"
+            android:authorities="trendy.mina.com.trendy"
+            android:exported="false" />
     </application>
 
 </manifest>
