--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="trendy.mina.com.trendy">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,21 +12,35 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name="MainActivity"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ArticlesActivity" />
-        <activity android:name=".DetailsActivity"></activity>
+        <activity
+            android:name="ArticlesActivity"
+            android:launchMode="singleTop"
+            android:parentActivityName="MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="trendy.mina.com.trendy.MainActivity" />
+        </activity>
+        <activity
+            android:name="DetailsActivity"
+            android:parentActivityName="ArticlesActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="ArticlesActivity" />
+        </activity>
 
         <provider
             android:name="trendy.mina.com.trendy.database.generated.TrendyContentProvider"
             android:authorities="trendy.mina.com.trendy"
             android:exported="false" />
-
 
         <receiver android:name=".widget.AppWidget">
             <intent-filter>
@@ -34,8 +51,6 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/widget_info" />
         </receiver>
-
-
     </application>
 
 </manifest>
