--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
     }
 
     flavorDimensions "free"
-    productFlavors{
+    productFlavors {
         free {
 
             dimension "free"
@@ -55,3 +55,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
+
+
+
+apply plugin: 'com.google.gms.google-services'
