--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'key0'
+            keyPassword '636262439++--+-'
+            storeFile file("$rootDir/keystore.jks")
+            storePassword '636262439++--+-'
+        }
+    }
     compileSdkVersion 26
     defaultConfig {
         applicationId "trendy.mina.com.trendy"
@@ -14,9 +22,9 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
     }
-
     flavorDimensions "free"
     productFlavors {
         free {
@@ -35,13 +43,12 @@ android {
 
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-
     compile 'com.google.android.gms:play-services-ads:10.0.1'
     compile 'com.google.firebase:firebase-crash:10.0.1'
     compile 'com.android.support:recyclerview-v7:26.1.0'
